src/objects/Net_Promoter_Survery__c.object
<CustomObject>
    <description>record recording the responses to the net promoter survey that marketing will send out to patients. Need this as a separate object, since a public site can note access opportunity records directly.</description>
    <fields>
        <fullName>NPscore__c</fullName>
        <label>NPscore</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <label>Opp ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_IP__c</fullName>
        <label>Patient IP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Net Promoter Survery</label>
    <nameField>
        <displayFormat>NPS-{0000}</displayFormat>
        <label>Net Promoter Survery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Net Promoter Surverys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>